# mallard

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  expander.cpp  expander.h  main.cpp  pyproject.toml
include/: blazingio.min.h  debug.h  ska_sort.h
include/lib/: am_tree.h  barrett.h  basic_dynamic_sequence.h  basic_link_cut_tree.h  bcc.h  becc.h  bellman_ford.h  berlekamp_massey.h  binary_trie.h  binomial.h  bipartition.h  bipolar_order.h  bit_vector.h  block_cut_tree.h  booth.h  ccc.h  centroids.h  chromatic_partition.h  cipolla.h  compress.h  ctd.h  dag_path_cover.h  debug.h  dijkstra.h  disjoint_sparse_table.h  dominator_tree.h  dual_fenwick_tree.h  dual_segment_tree.h  dynamic_csr.h  dynamic_graph.h  dynamic_lazy_segment_tree.h  dynamic_modint.h  dynamic_montgomery_modint.h  dynamic_segment_tree.h  dynamic_sequence.h  enumerate_c3.h  enumerate_runs.h  eppstein.h  erasable_heap.h  erdos_gallai.h  (+81 more)
include/lib/actions/: add_max.h  add_max_cnt.h  add_min.h  add_min_cnt.h  add_sum.h  affine_sum.h  assign.h  base.h  chmax_max.h  chmin_min.h  mul_prod.h  or_and.h  or_or.h
include/lib/algebra/: affine.h  affine_rev.h  assign.h  base.h  boyer_moore.h  combined.h  gcd.h  land.h  lor.h  lxor.h  max.h  max_cnt.h  min.h  min_cnt.h  misra_gries.h  mxpref.h  mxprefsuff.h  mxss.h  prod.h  rabin_karp.h  rabin_karp_rev.h  reversed.h  sum.h
include/lib/internal/: am_tree.h  binary_trie.h  concepts.h  dummy.h  dynamic_lazy_segment_tree.h  dynamic_segment_tree.h  foldable_am_tree.h  skew_heap.h  (+6 more)
src/: __main__.py  expand.py  template.cc
tests/: gcd_of_gaussian_integers.cc
(+725 files in other folders)
